Resolves #4.  Created Web API endpoint to produce data for client.

--- a/SearchTiles/SearchTiles.csproj
+++ b/SearchTiles/SearchTiles.csproj
@@ -137,11 +137,13 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\ElementDataController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AlienPeriodicTable\AlienElement.cs" />
+    <Compile Include="Models\AlienPeriodicTable\IElementModel.cs" />
     <Compile Include="Models\AlienPeriodicTable\WordParts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
