--- a/SearchTiles/SearchTiles.csproj
+++ b/SearchTiles/SearchTiles.csproj
@@ -189,14 +189,16 @@
   <ItemGroup>
     <TypeScriptCompile Include="TypeScriptSource\LibraryDefinitions\react-stub.d.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Actions\ActionBase.ts" />
-    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Actions\ActionNames.ts" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Actions\ActionTypes.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Actions\Dispatcher.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Actions\LifecycleActions.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Application.tsx" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Components\ElementTile.tsx" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Stores\ElementTileStore.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Stores\StoreBase.ts" />
-    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Util\AppStart.ts" />
-    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Util\EventEmitter.ts" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Utils\AppStart.ts" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Utils\Ajax.ts" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Utils\EventEmitter.ts" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
