--- a/SearchTiles/SearchTiles.csproj
+++ b/SearchTiles/SearchTiles.csproj
@@ -146,6 +146,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="content\images\screenshot.jpg" />
     <Content Include="content\javascript\compiledtypescript.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
