--- a/SearchTiles/SearchTiles.csproj
+++ b/SearchTiles/SearchTiles.csproj
@@ -148,6 +148,7 @@
   <ItemGroup>
     <Content Include="content\images\screenshot.jpg" />
     <Content Include="content\javascript\compiledtypescript.js" />
+    <Content Include="content\stylesheets\animation.css" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
