--- a/SearchTiles/SearchTiles.csproj
+++ b/SearchTiles/SearchTiles.csproj
@@ -200,6 +200,7 @@
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Components\ElementTile.tsx" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Components\FilterBox.tsx" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Stores\ElementTileStore.ts" />
+    <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Stores\FakeData\ElementTileLoading.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Stores\StoreBase.ts" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Components\TileHolder.tsx" />
     <TypeScriptCompile Include="TypeScriptSource\SearchTiles\Utils\AppStart.ts" />
